``` 🛠️ docs/docs.go -> UpdateDeckRequest object added 🛠️ docs/swagger.json -> UpdateDeckRequest added 🛠️ docs/swagger.yaml -> UpdateDeckRequest added 🛠️ file_list.yaml -> meow groups updated 🛠️ controller/deck.go -> Use UpdateDeckRequest 🛠️ controller/deck_test.go -> TestUpdateDeck updated 🛠️ meowmerize.db -> Binary differences detected 🛠️ Dashboard.jsx -> Add/edit deck functionality 🛠️ api.js -> Added updateDeck function ```
